--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
 
       <hr>
 
-      <p id="copyright">Copyright &copy; 2022 <a href="" target="_blank">VS</a>. All right reserved</p>
+      <p id="copyright">Copyright &copy; 2022 <a href="https://github.com/vinishikha" target="_blank">VS</a>. All right reserved</p>
     </div>
   </footer>
 
