--- a/index.html
+++ b/index.html
@@ -120,11 +120,8 @@
       <div class="container" id="about">
         <div class="row align-items-center">
           <div class="col-lg-6 py-3 wow fadeInUp">
-            <h1>Mission and Vision of <br> this project</h1>
-            <p class="text-grey mb-4">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-              tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
-              justo duo dolores et ea rebum. Accusantium aperiam earum ipsa eius, inventore nemo labore eaque porro
-              consequatur ex aspernatur. Explicabo, excepturi accusantium! Placeat voluptates esse ut optio facilis!</p>
+            <h1>Moto<br></h1>
+            <p class="text-grey mb-4">To make sure the proper supplies of aid are distributed at the appropriate locations</p>
             <a href="asst.html" class="btn btn-primary">Apply for Asistance</a>
           </div>
           <div class="col-lg-6 wow fadeInRight" data-wow-delay="400ms">
