--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div class="item">
           <div class="card-doctor">
             <div class="header">
-              <img src="img/doctors/doctor_1.jpg" alt="">
+              <img src="img/s1.jpeg" alt="">
               <div class="meta">
                 <a href="#"><span class="mai-call"></span></a>
                 <a href="#"><span class="mai-logo-whatsapp"></span></a>
@@ -150,7 +150,7 @@
             </div>
             <div class="body">
               <p class="text-xl mb-0">service 1</p>
-              <span class="text-sm text-grey">a</span>
+              <span class="text-sm text-grey">Disaster Relief Management</span>
             </div>
           </div>
         </div>
