--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <div class="item">
           <div class="card-doctor">
             <div class="header">
-              <img src="img/" alt="">
+              <img src="img/s2.jpeg" alt="">
               <div class="meta">
                 <a href="#"><span class="mai-call"></span></a>
                 <a href="#"><span class="mai-logo-whatsapp"></span></a>
@@ -165,14 +165,14 @@
             </div>
             <div class="body">
               <p class="text-xl mb-0">service 2</p>
-              <span class="text-sm text-grey">b</span>
+              <span class="text-sm text-grey">Apply for assistance</span>
             </div>
           </div>
         </div>
         <div class="item">
           <div class="card-doctor">
             <div class="header">
-              <img src="img/doctors/doctor_3.jpg" alt="">
+              <img src="img/s3.jpeg" alt="">
               <div class="meta">
                 <a href="#"><span class="mai-call"></span></a>
                 <a href="#"><span class="mai-logo-whatsapp"></span></a>
@@ -180,14 +180,14 @@
             </div>
             <div class="body">
               <p class="text-xl mb-0">service 3</p>
-              <span class="text-sm text-grey">c</span>
+              <span class="text-sm text-grey">Involve with us</span>
             </div>
           </div>
         </div>
         <div class="item">
           <div class="card-doctor">
             <div class="header">
-              <img src="img/doctors/doctor_3.jpg" alt="">
+              <img src="img/s4.jpeg" alt="">
               <div class="meta">
                 <a href="#"><span class="mai-call"></span></a>
                 <a href="#"><span class="mai-logo-whatsapp"></span></a>
@@ -195,7 +195,7 @@
             </div>
             <div class="body">
               <p class="text-xl mb-0">service 4</p>
-              <span class="text-sm text-grey">d</span>
+              <span class="text-sm text-grey">Nearby relief camps</span>
             </div>
           </div>
         </div>
@@ -209,8 +209,8 @@
               </div>
             </div>
             <div class="body">
-              <p class="text-xl mb-0">service 6</p>
-              <span class="text-sm text-grey">e</span>
+              <p class="text-xl mb-0">service 5</p>
+              <span class="text-sm text-grey">services</span>
             </div>
           </div>
         </div>
