--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           </div>
           <div class="col-lg-6 wow fadeInRight" data-wow-delay="400ms">
             <div class="img-place custom-img-1">
-              <img src="img/bg-doctor.png" alt="">
+              <img src="https://imgs.search.brave.com/ektkCdUry4encKNvoeAs6eV1Wp1zQhqzt0jVBZue5Dk/rs:fit:512:512:1/g:ce/aHR0cHM6Ly9jZG4w/Lmljb25maW5kZXIu/Y29tL2RhdGEvaWNv/bnMvY2hhdC1hbmQt/c29jaWFsLW5ldHdv/cmstMS82MC90aG91/Z2h0X19idWJibGVf/X3RoaW5raW5nX191/c2VyX19hdmF0YXIt/NTEyLnBuZw" alt="">
             </div>
           </div>
         </div>
